# flask_pdf_watermarker

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
api/: forms.py  index.py  pdf_utils.py
static/: styles.css
templates/: index.html
