[project]
name = "flask_pdf_watermarker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "colorama==0.4.6",
    "flask==3.0.0",
    "flask-wtf==1.2.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "pillow==10.4.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.0.1",
    "reportlab==4.2.0",
    "werkzeug==3.1.3",
    "wtforms==3.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
